# sideko

./: .gitignore  Cargo.toml  README.md  brewdog.yml  dist-workspace.toml  install.sh  release.py  release.sh  sideko_openapi.yaml
.github/ISSUE_TEMPLATE/: generation-bug.md
.github/workflows/: release-py.yaml  release-py.yml  release.yaml  release.yml
core/: Cargo.toml
core/src/: cli.rs  config.rs  lib.rs  main.rs  result.rs  styles.rs  utils.rs
core/src/cmds/: apis.rs  docs.rs  generate.rs  login.rs  mod.rs  sdk.rs
core/src/cmds/api/: create.rs  list.rs  mod.rs  stats.rs
core/src/cmds/api/version/: create.rs  list.rs  mod.rs  tabled.rs  update.rs
core/src/cmds/doc/: deploy.rs  list.rs  mod.rs  tabled.rs
core/src/cmds/sdk/: create.rs  init.rs  mod.rs  update.rs
core/src/cmds/sdk/config/: init.rs  mod.rs  sync.rs
core/src/html/: failure.html
core/src/utils/: config.rs  logging.rs  mod.rs  response.rs  tabled.rs  validators.rs
core/src/v1/: cli.rs  lib.rs  utils.rs
core/src/v1/cmds/: config.rs  docs.rs  login.rs
docs/: CLI.md  Cargo.toml
docs/src/: main.rs
releases/determinism-plus-llm/: README.md  kong-air-flights.yaml
releases/determinism-plus-llm/python/: CLAUDE.md
releases/determinism-plus-llms/: README.md
releases/determinism-plus-llms/assets/: kong-air-flights.yaml
releases/determinism-plus-llms/assets/typescript/: CLAUDE.md
sideko/: Cargo.toml
sideko-api/: Cargo.toml  README.md
sideko-api/src/: auth.rs  blocking.rs  error_enums.rs  lib.rs  request_types.rs  result.rs  schemas.rs
sideko-py/: Cargo.toml  README.md  pyproject.toml
sideko-py/src/: lib.rs
sideko/src/: cli.rs  lib.rs  main.rs  result.rs  styles.rs
sideko/src/cmds/: login.rs  logout.rs  mod.rs
sideko/src/cmds/account/: mod.rs  my_api_key.rs
sideko/src/cmds/api/: create.rs  lint.rs  list.rs  mod.rs  stats.rs  tabled.rs
sideko/src/cmds/api/version/: create.rs  download.rs  list.rs  mod.rs  tabled.rs  update.rs
sideko/src/cmds/config/: autocomplete.rs  mod.rs
sideko/src/cmds/doc/: deploy.rs  list.rs  mod.rs  tabled.rs
sideko/src/cmds/sdk/: create.rs  init.rs  mod.rs  released.rs  update.rs
sideko/src/cmds/sdk/config/: init.rs  mod.rs  sync.rs
sideko/src/html/: failure.html
sideko/src/utils/: config.rs  editor.rs  logging.rs  mod.rs  spinner.rs  tabled.rs  url_builder.rs  validators.rs
specs/: brewdog.yml
src/: generate.rs  login.rs  main.rs  utils.rs
src/cmds/: generate.rs  login.rs
src/html/: success.html
