[package]
name = "sideko_api"
version = "0.1.0"
edition = "2021"
description = "Rust API bindings - sideko_api"
license = "MIT"

[lib]
crate-type = ["lib"]
name = "sideko_api"

[dependencies]
serde_json = "1.0.97"
reqwest = { version = "0.11.18", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.43"
base64 = "0.21.2"
bytes = "1.4.0"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["rt", "macros"] }
