[package]
name = "sideko-py"
version = "0.1.0"
edition = "2021"
authors = [
    "Elias Posen <elias@sideko.dev>",
    "Patrick Kelly <patrick@sideko.dev>",
]

[lib]
name = "sideko_py"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# using the stable ABI with minimum Python version 3.8
sideko = { path = "../core" }
pyo3 = { version = "0.20.0", features = ["abi3-py38"] }
tokio = "1.36.0"
log = "0.4.20"
