[package]
name = "sideko-py"
version = "0.7.0"
edition = "2021"
authors = [
    "Elias Posen <elias@sideko.dev>",
    "Patrick Kelly <patrick@sideko.dev>",
]

[lib]
name = "sideko_py"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# Workspace
sideko = { path = "../core" }

# External
# using the stable ABI with minimum Python version 3.8
pyo3 = { version = "0.20.0", features = ["abi3-py38"] }
tokio = "1.36.0"
log = "0.4.20"
sideko_rest_api = "0.1.3"
