[package]
name = "sideko-py"
description = "Generate & manage SDKs with the Sideko CLI"
version = "1.4.1"
edition = "2021"
authors = [
    "Elias Posen <elias@sideko.dev>",
    "Patrick Kelly <patrick@sideko.dev>",
]
publish = false

[lib]
name = "sideko_py"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# Workspace
sideko = { path = "../sideko" }

# External
# using the stable ABI with minimum Python version 3.8
pyo3 = { version = "0.20.0", features = ["abi3-py38"] }
tokio = "1.36.0"
