[package]
name = "sideko"
version = "1.4.1"
edition = "2021"
authors = [
    "Elias Posen <elias@sideko.dev>",
    "Patrick Kelly <patrick@sideko.dev>",
]
description = "CLI for Sideko"
repository = "https://github.com/Sideko-Inc/sideko"
homepage = "https://sideko.dev"

default-run = "sideko"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "^0.10.70", features = ["vendored"] }
[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "^0.10.70", features = ["vendored"] }

[dependencies]
anstyle = "1.0.3"
camino = "1.1.6"
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.11.1"
flate2 = "1.0.27"
log = "0.4.20"
open = "5.0.1"
rocket = "0.5.0"
serde = "1.0.196"
serde_json = "1.0.113"
tar = "0.4.40"
tokio = { version = "1.35.1", features = ["time"] }
url = "2.4.1"
semver = "1.0.23"
sideko_rest_api = "0.7.5"
tempfile = "3.12.0"
dotenvy = "0.15.7"
tabled = "0.18.0"
terminal_size = "0.4.1"
regex = "1.11.1"
inquire = "0.7.5"
fuzzy-matcher = "0.3.7"
keyring = { version = "3.6.1", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
ring = "^0.17.12"
chrono = "0.4.39"
spinoff = "0.8.0"
clap_complete = "4.5.42"
dirs = "6.0.0"
arboard = "3.4.1"
csv = "1.3.1"

[package.metadata.dist]
npm-scope = "@sideko"
npm-package = "cli"
